Fix incorrect flex wrap
See: https://trello.com/c/tujaGjRY

--- a/assets/scss/components/_tags.scss
+++ b/assets/scss/components/_tags.scss
@@ -1,5 +1,6 @@
 .post-tags  {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
 
     @include respond-to('aussie') {
